@@ -1,3 +1,15 @@
+2012-06-12  Hojong Han  <hojong.han@samsung.com>
+
+        Property names of the built-in object cannot be retrieved 
+        after trying to delete one of its properties
+        https://bugs.webkit.org/show_bug.cgi?id=86461
+
+        Reviewed by Gavin Barraclough.
+
+        * runtime/JSObject.cpp:
+        (JSC::getClassPropertyNames):
+        (JSC::JSObject::getOwnPropertyNames):
+
 2012-06-11  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         [CMAKE][EFL] Remove duplicated executable output path
